// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon tests handleIcon With font-awesome fab 1`] = `
<span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-apple "
    data-icon="apple"
    data-prefix="fab"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 384 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</span>
`;

exports[`Icon tests handleIcon With font-awesome far 1`] = `
<span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle "
    data-icon="circle"
    data-prefix="far"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256zM256 48C141.1 48 48 141.1 48 256C48 370.9 141.1 464 256 464C370.9 464 464 370.9 464 256C464 141.1 370.9 48 256 48z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</span>
`;

exports[`Icon tests handleIcon With font-awesome fas 1`] = `
<span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle "
    data-icon="circle"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</span>
`;
